trunk/Archive2/45/10b21e561d9136/output
main.cpp:16:4: error: no matching function for call to 'foo'
   foo(l());
   ^~~
main.cpp:4:6: note: candidate function not viable: expects an l-value for 1st argument
void foo(int& x)
     ^
1 error generated.
